     because it interferes with several common window managers
   * changed the hotkey for 'repeat recruit' from 'ctrl+shift+r' to
     'ctrl+alt+r' since shift toggles accelerated mode and produced an
     animation glitch with this hotkey; this needs to be considered for
     future hotkey changes/additions (see bug #6312)
 * WML engine
   * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
     show up in the multiplayer game creation interface (FR #6397)
   * new [set_specials] tag to allow custom special in effect tags
   * new remove_specials=<id_list> key to allow to remove specials in effect 
     tags
   * obsolete set_special= in [effect] tags
   * correct handling of UTF8 filenames under windows
   * fighting animations can now be filtered on swing number
   * add progressive paramteters, allow to specify a value that will move
   continuously in an animation
   * alpha blending is our first progressive parameter
   * units can now have a recruit animation that will be played on unit
   recruit.
   * units now have idle animations when they arn't used for some time
   * units now have levelin animations when they level into this unit
   * units now have levelout animations when they level out of this unit
 * multiplayer game management
   * client now tells the server if a game ended in victory or defeat 
   * configurable castle size for random map generator (patch #598, FR #3232)
 * multiplayer scenarios
   * scenarios can set faction, recruit, leader, and some other initial 
     settings previously ignored in multiplayer
 * language and i18n:
   * new manpages: Czech, Italian, Slovak.
   * updated manpages: German, Swedish.
   * removed manpages (outdated): Hungarian.
	
Version 1.1.7:
 * campaigns
   * Heir to the Throne
     * added 2 mermen to Bay of Pearls on hard
     * lowered turn limits on Scepter of Fire to something sane
 * language and i18n:
    * updated translations: French, German, Portuguese (Brazil), Spanish,