@@ -29,6 +29,7 @@ Version 1.3-svn:
      'ctrl+alt+r' since shift toggles accelerated mode and produced an
      animation glitch with this hotkey; this needs to be considered for
      future hotkey changes/additions (see bug #6312)
+   * when discovering friendly units, the message is now blue
  * WML engine
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
      show up in the multiplayer game creation interface (FR #6397)
